# specweaver

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pyre_configuration  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  Containerfile  Containerfile.sandbox  LICENSE  README.md  alembic.ini  alembic_test.db  annotate_context.py  compose.yaml  context.yaml  coverage_report.txt  docker-entrypoint.sh  e2e_out.txt  fix_script.py  fix_workflows.py  mypy_out.txt  out.txt  out2.txt  out3.txt  out4.txt  pyproject.toml  pyrightconfig.json  pytest_const.txt  pytest_e2e_full.txt  pytest_failing.txt  pytest_failures.txt  pytest_implement.txt  pytest_integ_full.txt  rename_script.py  replace_models.py  run_coverage.py  run_debug.py  run_e2e_tests.py  (+21 more)
.agents/: AGENTS.md
.agents/skills/specweaver-design/: SKILL.md
.agents/skills/specweaver-dev/: SKILL.md
.agents/skills/specweaver-feature/: SKILL.md
.agents/skills/specweaver-implementation-plan/: SKILL.md
.agents/skills/specweaver-pre-commit/: SKILL.md
.agents/skills/specweaver-red-blue-review/: SKILL.md
.agents/workflows/: audit-implementation-plan.md  design.md  dev.md  feature.md  implementation-plan.md  pre-commit-test-gap.md  pre-commit.md
.claude/: settings.json
.claude/hooks/: guard_finished_stories.py
.codebase-memory/: artifact.json
.github/workflows/: container.yml
.specweaver/: graph.db
.specweaver/templates/: component_spec.md
alembic/: env.py
alembic/versions/: 037b85034bb0_init_monolith_schema.py  1092f73fcd39_add_agent_memory_bank_tables.py  af60fd3509a2_tech_005_rename_tables.py
docs/: INDEX.md  ORIGINS.md  README.md  developer_guide.html  quickstart.md  test_coverage_matrix.md  testing_guide.md
docs/analysis/: B-SENS-02_tree_climber_analysis.md  Specweaver Architecture Analysis of some ideas.md  agent_workflow_tracker_brainstorm.md  automated_guardrails_architecture_and_testing.md  flow_synthesis.md  flowmanager_legacy_reference.md  flowmanager_reevaluation.md  fractal_readiness_walkthrough.md  future_capabilities_reference.md  llm_routing_and_cost_analysis.md  methodology_open_research.md  static_spec_readiness_analysis.md
docs/architecture/: README.md  architecture_reference.md  architecture_visual_overview.md  completeness_tests.md  constitution_template.md  context_yaml_spec.md  feature_3_32d_refactoring_design.md  file_structure_comparison.md  future_architecture_adaptations.md  lifecycle_layers.md  mcp_architecture_design.md  methodology_index.md  review_checklists.md  spec_methodology.md  spec_review_pipeline.md  synthetic_commons_and_questionnaire_design.md  topology_and_graphrag_evolution.md
docs/dev_guides/: adding_framework_guide.md  adding_llm_adapters.md  adding_prompt_slots.md  adding_tools_and_atoms.md  adding_validation_rules.md  agent_memory_state_tracking.md  agent_tools_reference.md  code_structure_and_ast_editing.md  developer_guide.html  domain_driven_cli_creation.md  knowledge_graph_querying.md  language_support_guide.md  layer_isolation_and_di.md  mcp_db_harness_setup.md  mcp_implementation_patterns.md  ontology_mapping.md  pipeline_engine_guide.md  pluggable_contexts.md  protocol_analyzers.md  scenario_pipelines.md  spec_rot_pre_commit_workflow.md  special_patterns_and_adaptations.md  subprocess_execution.md  testing_guide.md
docs/proposals/: domain_brain_hybrid_rag.md  mvp_feature_definition.md  mvp_implementation_plan.md  specweaver_roadmap.md
docs/roadmap/: backlog.md  capability_matrix.md  master_story_roadmap.md  phase_3_feature_expansion.md  phase_4_advanced.md  phase_5_domain_brain.md  phase_6_external_validation.md  specweaver_roadmap.md
docs/spin_off_ideas/: dag_roadmap_generator.md
docs/user_guides/: 1_installation_and_setup.md  2_drafting_effective_specs.md  3_managing_constitutions.md  4_interactive_hitl_gates.md  5_framework_archetypes.md  6_ast_surgical_editing.md  7_model_context_protocol.md  8_prompt_render_profiles.md
fake_dir/: test_component_spec.md
scratch/: check_db.py  check_db2.py  merge_cli.py  remove_illegal_imports.py  split_tests.py  update_drafter_tests.py
scripts/: build-container.ps1  build-container.sh  check_file_sizes.py  check_roadmap_sync.py
specs/: TestComponent_spec.md
src/specweaver/: __init__.py  cli.py  context.yaml  logging.py  telemetry_logger.py
src/specweaver/api/: __init__.py  (+5 more)
tests/: CLAUDE.md
tests/cli/: test_hooks.py  test_rot_cmd.py
tests/e2e/: conftest.py  test_architecture_pipeline.py  test_ast_tool_injection.py  test_cli_bootstrap_e2e.py  test_cli_decentralized_e2e.py  test_config_routing_e2e.py  test_constitution_e2e.py  test_dal_e2e_pipeline.py  test_domain_profile_e2e.py  test_drift_e2e.py  test_hooks_e2e.py  test_lifecycle.py  test_lifecycle_edge_cases.py  test_lineage_e2e.py  test_logging_e2e.py  test_multi_project_e2e.py  test_new_feature_e2e.py  test_pipeline_e2e.py  test_planning_e2e.py  test_polyglot_validation_e2e.py  test_standards_e2e.py  test_tach_sync_e2e.py  test_telemetry_e2e.py  test_testrunner_tools_e2e.py  test_topology_e2e.py  test_validation_pipeline_e2e.py
tests/fixtures/: bad_spec_ambiguous.md  bad_spec_no_examples.md  bad_spec_too_big.md  db_utils.py  good_spec.md
tests/integration/: __init__.py  conftest.py  test_config_cascade.py  test_constitution_integration.py  test_drift_detector.py  test_feature_kind_integration.py  test_feature_pipeline_integration.py  test_lint_fix_real.py  test_logging_routing.py  test_pipeline.py  test_profile_cascade.py  test_registry_integration.py  test_scan_and_infer.py  test_telemetry_integration.py  test_telemetry_roundtrip.py
tests/manual/: test_api_live.py  test_llm_live.py  test_stitch_live.py
tests/unit/: conftest.py  test_analyzers.py  test_architecture.py  test_cli.py  test_code_rules.py  test_discovery.py  test_draft_review.py  test_edge_cases.py  test_git_atom.py  test_git_executor.py  test_git_interfaces.py  test_git_tool.py  test_inferrer.py  test_llm.py  test_logging.py  test_logging_rollout.py  test_scaffold.py  test_settings.py  test_telemetry_logger.py  test_topology.py  test_validation.py
tmp_test_dir/: test.md
(+2563 files in other folders)
